<resources>
    <string name="app_name">GSB-RV-Visiteur</string>
    <string name="Connexion">Connexion</string>
    <string name="visiteur">Visiteur</string>
    <string name="gsb_rv">GSB RV-</string>
    <string name="annuler">Annuler</string>
    <string name="saisir">Saisir</string>
    <string name="consulter">Consulter</string>
    <string name="helpDialogString">

    </string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="matricule">Matricule</string>
    <string name="mois">Mois</string>
    <string name="annee">Année</string>
    <string name="valider">valider</string>
    <string name="medocsOffertsRapport">Medicaments offerts :</string>
    <string name="ajouter">Ajouter</string>
    <string name="nom_du_praticien">Nom du praticien</string>
    <string name="praticien">Praticien :</string>
    <string name="validerCaps">Valider</string>
    <string name="motif">Motif...</string>
</resources>