<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/nature_img_4" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/gsb_rv"
                android:textColor="@color/dark_olive_green"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/visiteur"
                android:textColor="@color/dark_olive_green"
                android:textSize="32sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/dark_olive_green" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:drawableEnd="@drawable/ic_email_white_24dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/matricule"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" android:id="@+id/teMatr"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:drawableEnd="@drawable/ic_lock_white_24dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" android:id="@+id/teMdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                    android:onClick="seConnecter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/buttonshapewhitebg"
                    android:fontFamily="@font/calibri"
                    android:text="@string/Connection"
                    android:textAllCaps="false"
                    android:textColor="#96ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/btnConnection"/>
            <Button
                    android:onClick="annuler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/buttonshapewhitebg"
                    android:fontFamily="@font/calibri"
                    android:text="@string/annuler"
                    android:textAllCaps="false"
                    android:textColor="#96ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/btnAnnuler"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
