<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuActivity">
    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/nature_img_6" />
    </FrameLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/nomVisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="NOM"
                android:textColor="@color/dark_olive_green"
                android:textSize="16sp" />
        <TextView
                android:id="@+id/prenomVisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="prenom"
                android:textColor="@color/dark_olive_green"
                android:textSize="16sp" />
        <Button
                android:onClick="seDeconnecter"
                android:background="@drawable/log_out_green"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/btnSeDeconnecter"/>

    </LinearLayout>
    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:text="@string/gsb_rv"
                    android:textColor="@color/dark_olive_green"
                    android:textSize="32sp" />

        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:text="@string/visiteur"
                    android:textColor="@color/dark_olive_green"
                    android:textSize="32sp" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/dark_olive_green" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/saisir"
                android:textAllCaps="false"
                android:textColor="#96ffffff"
                android:textSize="24sp"
                android:textStyle="normal"
                android:id="@+id/btnSaisir"/>

        <Button
                android:onClick="consulter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/consulter"
                android:textAllCaps="false"
                android:textColor="#96ffffff"
                android:textSize="24sp"
                android:textStyle="normal"
                android:id="@+id/btnConsulter"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:gravity="bottom"
            android:orientation="vertical">
        <Button
                android:onClick="help"
                android:id="@+id/btnHelp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/question_mark_white_no_circle"
                android:fontFamily="@font/calibri"
        />
    </LinearLayout>

</RelativeLayout>