<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuActivity" android:visibility="visible">
    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/nature_img_11"/>
    </FrameLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:id="@+id/linearLayoutNomPrenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/nomVisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:text="NOM"
                    android:textColor="#96ffffff"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/prenomVisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:text="prenom"
                    android:textColor="#96ffffff"
                    android:textSize="16sp"/>
            <Button
                    android:onClick="retour"
                    android:background="@drawable/ic_retour_green_24"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/btnRetour"/>
            <Button
                    android:onClick="seDeconnecter"
                    android:background="@drawable/log_out_green"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/btnSeDeconnecter"/>
        </LinearLayout>
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        <Button
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/validerCaps"
                android:textAllCaps="false"
                android:textColor="#96ffffff"
                android:textSize="22sp"
                android:textStyle="bold"
                android:id="@+id/btnValiderRapport"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="90dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#96ffffff" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/praticien"
                android:textStyle="bold"
                android:textColor="#96ffffff"
                android:textSize="18sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#96ffffff" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiPraNom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/gotham"
                    android:textColorHint="#96ffffff"
                    android:maxLength="25"
                    android:hint="Nom..."
                    android:textColor="#96ffffff"
                    android:textSize="16sp"/>
            <com.google.android.material.textfield.TextInputEditText
                    android:textColorHint="#96ffffff"
                    android:id="@+id/tiPraPrenom"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:hint="Prenom..."
                    android:textColor="#96ffffff"
                    android:maxLength="25"
                    android:textSize="16sp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#96ffffff"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputEditText
                    android:textColorHint="#96ffffff"
                    android:id="@+id/tiPraVille"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:hint="Ville..."
                    android:maxLength="25"
                    android:textColor="#96ffffff"
                    android:textSize="16sp"/>
            <com.google.android.material.textfield.TextInputEditText
                    android:textColorHint="#96ffffff"
                    android:id="@+id/tvPraCp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:hint="Code Postal..."
                    android:maxLength="18"
                    android:textColor="#96ffffff"
                    android:textSize="16sp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#96ffffff" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="Date Visite :"
                android:textStyle="bold"
                android:textColor="#96ffffff"
                android:textSize="18sp"/>
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        <TextView
                android:layout_marginEnd="10dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="Date Redaction :"
                android:textStyle="bold"
                android:textColor="#96ffffff"
                android:textSize="18sp"/>
    </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#96ffffff" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="#96ffffff"
                android:theme="@style/EditScreenTextInputLayoutStyle">
            <DatePicker
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/datePickerDateVisite"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#96ffffff" />
        <TextView
               android:layout_gravity="center_vertical"
                android:id="@+id/tiRapportDateRedaction"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="DATE REDACTION"
                android:textColor="#96ffffff"
                android:textSize="16sp"/>
    </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#96ffffff" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="Motif : "
                android:textStyle="bold"
                android:textColor="#96ffffff"
                android:textSize="18sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#96ffffff" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                    android:onClick="ajouterMotif"
                    android:background="@drawable/ajouter_medicament"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/btnAjouterMotif"/>
            <Spinner
                    android:id="@+id/spinnerMotif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:background="@android:drawable/spinner_background"/>
            <TextView
                    android:id="@+id/tvAutreMotif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:textColor="#96ffffff"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
            <TextView
                    android:id="@+id/tvMedicamentQte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:textColor="#96ffffff"
                    android:textStyle="bold"
                    android:inputType="number"
                    android:textSize="18sp"/>

        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#96ffffff" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="Bilan : "
                android:textColor="#96ffffff"
                android:textStyle="bold"
                android:textSize="18sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#96ffffff" />
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvRapportBilan"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:hint="Bilan..."
                android:textColorHint="#96ffffff"
                android:textColor="#96ffffff"
                android:textSize="16sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#96ffffff" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:textStyle="bold"
                android:text="@string/medocsOffertsRapport"
                android:textColor="#96ffffff"
                android:textSize="18sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#96ffffff" />
        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerMedicaments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/spinner_background"
        />
        <ListView
            android:choiceMode="singleChoice"
            android:id="@+id/lvMedicmentsAll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="#96ffffff"
            android:dividerHeight="1dp"
            android:clickable="true"
            android:footerDividersEnabled="true"/>
    </LinearLayout>
</RelativeLayout>